--- a/WarhammerRandom/WarhammerRandom.csproj
+++ b/WarhammerRandom/WarhammerRandom.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>WarhammerRandom</RootNamespace>
     <AssemblyName>WarhammerRandom</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,10 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Atack.cs" />
+    <Compile Include="AtackModel.cs" />
+    <Compile Include="DamageModel.cs" />
     <Compile Include="DeathInTestGrath.cs" />
     <Compile Include="DiceTools.cs" />
     <Compile Include="Hit.cs" />
+    <Compile Include="HitsModel.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -60,6 +63,7 @@
     <Compile Include="Warhammer40000ChanceTester.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="Wound.cs" />
+    <Compile Include="WoundsModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
